attempting to fix heroku memory quota issue